<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackgroundNasa"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/serverData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_constraint_layout_server_data"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupDatePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:singleLine="true"
            android:layout_gravity="center"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDayBeforeYesterday"
                style="@style/chipStyleNasa"
                android:text="@string/text_day_before_yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYesterday"
                style="@style/chipStyleNasa"
                android:text="@string/text_yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipToday"
                style="@style/chipStyleNasa"
                android:text="@string/text_today" />
        </com.google.android.material.chip.ChipGroup>

        <com.skysoft.nasa.utils.EquilateralImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass"
            android:visibility="gone"/>
        
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:showFullScreenButton="true"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/unavailableServer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable_server"
                android:textColor="@color/red_200"
                android:textSize="@dimen/unavailable_server_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDesriptionError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_200"
                android:textSize="@dimen/unavailable_server_texterror_size"
                tools:text="Описание ошибки" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/unavailable" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>